[js] update loginController, userController, authMiddleware for BearerToken, and passwordReset api added
